一些样式的修改

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 
 	<!-- Title and Icon -->
-	<title>红色电影意象——一个用于红色电影镜头理解的整体数据集</title>
+	<title>红色电影意象——传承红色经典，理解镜头故事</title>
 	<link rel="shortcut icon" href="./emptyshot.ico" />
 
 	<!-- include css -->
@@ -52,8 +52,6 @@
 						onclick="slideTo('about');  return false;">About</a>
 					<a class="nav-item nav-link text-grey" href="#contrast"
 						onclick="slideTo('contrast');  return false;">Contrast</a>
-					<a class="nav-item nav-link text-grey" href="#download"
-						onclick="slideTo('download');  return false;">Download</a>
 				</div>
 			</div>
 		</div>
@@ -76,7 +74,7 @@
 						</span>
 					</a>
 
-					<a class="nav-item nav-link text-grey" href="https://gitee.com/fish-in-jiangan-river/emptyshot" target="_blank">
+					<a class="nav-item nav-link text-grey" href="https://gitee.com/fish-in-jiangan-river/redlens" target="_blank">
 						<span>Gitee
 							<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px"
 								viewBox="0 0 100 100" class="svg-icon">
@@ -101,8 +99,8 @@
 			<div id='banner-text-sub' class="color-grey">传承红色经典，理解镜头故事</div>
 			<br />
 			<br />
-			<button type="button" class=" btn btn-success btn-rounded" onclick="slideTo('download'); return false;">
-				&nbsp&nbspDownload&nbsp&nbsp</button>
+			<!-- <button type="button" class=" btn btn-success btn-rounded" onclick="slideTo('download'); return false;">
+				&nbsp&nbspDownload&nbsp&nbsp</button> -->
 		</div>
 		<div id="banner-im-grid">
             <div class="flying-text2" id='banner-text'>
@@ -128,24 +126,24 @@
 					<div class="abs-mg-top-hg  col-xl-3 col-lg-3 col-md-3 col-12">
 						<div class="abs-mg-bot"><img src='src/imgs/hdd.png' class="icon"></div>
 						<div class="md-font bold abs-mg-bot-ti">海量数据</div>
-						<div class="sm-font color-light width-limit-250 ">
+						<!-- <div class="sm-font color-light width-limit-250 ">
 							<div>五百多部电影，一千多部预告片等等，都可以在本数据集中免费获得。</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="abs-mg-top-hg  col-xl-3 col-lg-3 col-md-3 col-12">
 						<div class="abs-mg-bot"><img src='src/imgs/anno.png' class="icon"></div>
 						<div class="md-font bold abs-mg-bot-ti">丰富的注释</div>
-						<div class="sm-font color-light width-limit-250">各种注释提供了关于演员、场景和电影风格的各种注释。</div>
+						<!-- <div class="sm-font color-light width-limit-250">各种注释提供了关于演员、场景和电影风格的各种注释。</div> -->
 					</div>
 					<div class="abs-mg-top-hg col-xl-3 col-lg-3 col-md-3 col-12">
 						<div class="abs-mg-bot"><img src='src/imgs/code.png' class="icon"></div>
 						<div class="md-font bold abs-mg-bot-ti">多样化的任务</div>
-						<div class="sm-font color-light width-limit-250">支持若干视觉和语言任务，从低级到高级。</div>
+						<!-- <div class="sm-font color-light width-limit-250">支持若干视觉和语言任务，从低级到高级。</div> -->
 					</div>
 					<div class="abs-mg-top-hg col-xl-3 col-lg-3 col-md-3 col-12">
 						<div class="abs-mg-bot"><img src='src/imgs/toolbox.png' class="icon"></div>
 						<div class="md-font bold abs-mg-bot-ti">开放源代码工具箱</div>
-						<div class="sm-font color-light width-limit-250">易于使用的工具箱，设计用于实验和数据处理。</div>
+						<!-- <div class="sm-font color-light width-limit-250">易于使用的工具箱，设计用于实验和数据处理。</div> -->
 					</div>
 				</div>
 
