--- a/src/pages/compare.html
+++ b/src/pages/compare.html
@@ -17,7 +17,7 @@
 <body>
     <!-- 头部 -->
     <header>
-        <h1>emptyshot电影信息对比平台</h1>
+        <h1>红色电影镜头信息对比平台</h1>
         <div class="showTime"></div>
         <!-- 获取当前时间 -->
         <script>
@@ -55,10 +55,10 @@
                     <div class="chart">
                         <img src="" alt="" />
                     </div>
-                    <div class="map">
+                    <!-- <div class="map">
                         <div class="map1"></div>
                         <div class="map2"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- 右边盒子 -->
@@ -72,10 +72,10 @@
                     <div class="chart">
                         <img src="" alt="" />
                     </div>
-                    <div class="map">
+                    <!-- <div class="map">
                         <div class="map1"></div>
                         <div class="map2"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
