加上《长津湖》电影色彩图片

--- a/index.html
+++ b/index.html
@@ -187,12 +187,13 @@
 					</div>
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
 						<div class="card">
-							<div class="card-header bold"> 🎬&nbsp 空境分布</div>
+							<div class="card-header bold"> 🎬&nbsp 电影色彩</div>
 							<div class="card-body sm-font">
 								<div class="card-text-limit overflowy color-light justify-text-between">
-                                    空镜头，又叫“景物镜头”，是指画面中没有人。空镜头与常规镜头可以互补而不能代替，是导演阐明思想内容、叙述故事情节、抒发感情的重要手段。
-                                    空镜头常用以介绍环境背景、交代时间空间、抒发人物情绪、推进故事情节、表达作者态度，具有说明、暗示、象征、隐喻等功能，
-                                    在影片中能够产生借物喻情、见景生情、情景交融、渲染意境、烘托气氛、引起联想等艺术效果，在银幕的时空转换和调节影片节奏方面也有独特作用。
+									电影色彩是指电影中使用的颜色，包括角色服装、布景、灯光等方面的色调搭配。
+									电影色彩是电影艺术中十分重要的一部分，它能够传递情感、氛围和故事情节的暗示。
+									在电影制作中，通过对色彩的运用，可以实现一定的艺术效果，增强电影的表现力和观赏性。
+									同时，不同的电影类型或题材也会运用不同的色彩风格，比如喜剧电影通常会使用明亮、鲜艳的色彩，而恐怖电影则会使用暗淡、单调的颜色来营造紧张的氛围。
                                 </div>
 								<a href="#" class="contrastBtn d-none d-sm-block btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-data-movie">进入比较</a>
 							</div>
