初步完善效果

--- a/index.html
+++ b/index.html
@@ -123,27 +123,17 @@
 		<div class="row" id="about">
 			<div class="col-xl-12 col-md-12 col-12">
 				<div class="row abs-mg-bot-xl text-center justify-content-between">
-					<div class="abs-mg-top-hg  col-xl-3 col-lg-3 col-md-3 col-12">
-						<div class="abs-mg-bot"><img src='src/imgs/hdd.png' class="icon"></div>
-						<div class="md-font bold abs-mg-bot-ti">海量数据</div>
-						<!-- <div class="sm-font color-light width-limit-250 ">
-							<div>五百多部电影，一千多部预告片等等，都可以在本数据集中免费获得。</div>
-						</div> -->
-					</div>
-					<div class="abs-mg-top-hg  col-xl-3 col-lg-3 col-md-3 col-12">
-						<div class="abs-mg-bot"><img src='src/imgs/anno.png' class="icon"></div>
-						<div class="md-font bold abs-mg-bot-ti">丰富的注释</div>
-						<!-- <div class="sm-font color-light width-limit-250">各种注释提供了关于演员、场景和电影风格的各种注释。</div> -->
-					</div>
-					<div class="abs-mg-top-hg col-xl-3 col-lg-3 col-md-3 col-12">
+					<div class="contrastBtn abs-mg-top-hg col-xl-3 col-lg-3 col-md-3 col-12" style="cursor: pointer;">
 						<div class="abs-mg-bot"><img src='src/imgs/code.png' class="icon"></div>
-						<div class="md-font bold abs-mg-bot-ti">多样化的任务</div>
-						<!-- <div class="sm-font color-light width-limit-250">支持若干视觉和语言任务，从低级到高级。</div> -->
+						<div class="md-font bold abs-mg-bot-ti">色彩运镜比较</div>
 					</div>
-					<div class="abs-mg-top-hg col-xl-3 col-lg-3 col-md-3 col-12">
-						<div class="abs-mg-bot"><img src='src/imgs/toolbox.png' class="icon"></div>
-						<div class="md-font bold abs-mg-bot-ti">开放源代码工具箱</div>
-						<!-- <div class="sm-font color-light width-limit-250">易于使用的工具箱，设计用于实验和数据处理。</div> -->
+					<div class="contrastBtn abs-mg-top-hg  col-xl-3 col-lg-3 col-md-3 col-12" style="cursor: pointer;">
+						<div class="abs-mg-bot"><img src='src/imgs/hdd.png' class="icon"></div>
+						<div class="md-font bold abs-mg-bot-ti">空境分布比较</div>
+					</div>
+					<div class="contrastBtn abs-mg-top-hg  col-xl-3 col-lg-3 col-md-3 col-12" style="cursor: pointer;">
+						<div class="abs-mg-bot"><img src='src/imgs/anno.png' class="icon"></div>
+						<div class="md-font bold abs-mg-bot-ti">红色意象展示</div>
 					</div>
 				</div>
 
@@ -154,7 +144,7 @@
 			<div class="col-xl-12 col-md-12 col-12 abs-pd-top-md">
 				<hr />
 				<p class="lg-font bold">
-					红色电影镜头信息比较
+					项目名词解释
 				</p>
 			</div>
 			<div class="col-xl-12 col-md-12 col-12">
@@ -168,7 +158,6 @@
                                     空镜头常用以介绍环境背景、交代时间空间、抒发人物情绪、推进故事情节、表达作者态度，具有说明、暗示、象征、隐喻等功能，
                                     在影片中能够产生借物喻情、见景生情、情景交融、渲染意境、烘托气氛、引起联想等艺术效果，在银幕的时空转换和调节影片节奏方面也有独特作用。
                                 </div>
-								<a href="#" class="contrastBtn d-none d-sm-block btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-data-movie">进入比较</a>
 							</div>
 						</div>
 					</div>
@@ -181,7 +170,6 @@
                                     不要把这里所说的快慢概念同镜头所能捕捉快速运动物体的能力相混淆，就像把"干"这个术语用于马提尼酒时实际上与相对湿度并没有关系，
                                     把"快"这个术语用于镜头时同它凝固住快速运动物体的能力也没有什么关系；它只是用以描述镜头在特定的时间内所传送的光量。
 								</div>
-								<a href="#" class="contrastBtn d-none d-sm-block btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-data-trailer">进入比较</a>
 							</div>
 						</div>
 					</div>
@@ -195,7 +183,6 @@
 									在电影制作中，通过对色彩的运用，可以实现一定的艺术效果，增强电影的表现力和观赏性。
 									同时，不同的电影类型或题材也会运用不同的色彩风格，比如喜剧电影通常会使用明亮、鲜艳的色彩，而恐怖电影则会使用暗淡、单调的颜色来营造紧张的氛围。
                                 </div>
-								<a href="#" class="contrastBtn d-none d-sm-block btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-data-movie">进入比较</a>
 							</div>
 						</div>
 					</div>
@@ -208,7 +195,6 @@
                                     不要把这里所说的快慢概念同镜头所能捕捉快速运动物体的能力相混淆，就像把"干"这个术语用于马提尼酒时实际上与相对湿度并没有关系，
                                     把"快"这个术语用于镜头时同它凝固住快速运动物体的能力也没有什么关系；它只是用以描述镜头在特定的时间内所传送的光量。
 								</div>
-								<a href="#" class="contrastBtn d-none d-sm-block btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-data-trailer">进入比较</a>
 							</div>
 						</div>
 					</div>
