--- a/src/pages/red_image.html
+++ b/src/pages/red_image.html
@@ -18,26 +18,11 @@
             margin-bottom: 1rem;
             text-align: center;
         }
-        .ChangjinLake{
-            width:13rem;
-            height: 8rem;
-            position: absolute;
-            left:50%;
-            margin-left: -6.5rem;
-            background-image: url('./images/ChangjinLake.png');
-            /* background-size:cover可以让图片自适应视口大小并保持比例，同时覆盖整个背景*/
-            background-size: cover; 
-            /* background-repeat:no-repeat可以防止图片重复出现。 */
-            background-repeat: no-repeat;
-            /* background-position:center center可以将图片置于视口中央。 */
-            background-position: center center;
-        }
     </style>
 </head>
 <body>
     <div class="content-box">
-        <h1>《长津湖》电影色彩</h1>
-        <div class="ChangjinLake"></div>
+        <h1>这个页面展示项目研究的一些红色意象</h1>
     </div>
     <!-- 屏幕适配 -->
     <script type="text/javascript"> 
