--- a/src/pages/empty_shot/compare.html
+++ b/src/pages/empty_shot/compare.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./emptyshot.ico" />
-    <title>红色电影镜头信息对比平台</title>
+    <title>中外电影信息展示平台</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
     <!-- 先引入jquery.js，才能使用点击切换效果和select2 -->
@@ -17,10 +17,10 @@
 <body>
     <!-- 头部 -->
     <header>
-        <h1>红色电影镜头信息对比平台</h1>
-        <div class="showTime"></div>
+        <h1>中外电影信息展示平台</h1>
+        <!-- <div class="showTime"></div> -->
         <!-- 获取当前时间 -->
-        <script>
+        <!-- <script>
             var t = null;
             t = setTimeout(time, 1000);//開始运行
             function time() {
@@ -35,7 +35,7 @@
                 document.querySelector(".showTime").innerHTML = '当前时间：' + y + "年" + mt + "月" + day + "日-" + h + "时" + m + "分" + s + "秒";
                 t = setTimeout(time, 1000); //设定定时器，循环运行     
             }
-        </script>
+        </script> -->
     </header>
     <!-- 页面主题部分 -->
     <section class="mainbox">
