update: 一些简单的更新

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
 					</div>
 					<div class=" col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
 						<div class="card">
-							<div class="card-header bold">🎞️&nbsp 镜头变化快慢</div>
+							<div class="card-header bold">🎞️&nbsp 人物情绪变化</div>
 							<div class="card-body  sm-font">
 								<div class="card-text-limit overflowy color-light justify-text-between">
-                                    快慢镜头的速度是指特定的镜头在特定的时间内所能传送的光量。传送光量多的镜头被称为快镜头，传送光量相当少的镜头则被称为慢镜头。
-                                    不要把这里所说的快慢概念同镜头所能捕捉快速运动物体的能力相混淆，就像把"干"这个术语用于马提尼酒时实际上与相对湿度并没有关系，
-                                    把"快"这个术语用于镜头时同它凝固住快速运动物体的能力也没有什么关系；它只是用以描述镜头在特定的时间内所传送的光量。
+									电影人物情绪变化指的是电影中人物角色从开始到结束，心理和情感状态的变化过程。
+									这些情感状态可以是愉快、悲伤、痛苦、失望、恐惧、愤怒等等。在电影中，人物的情绪变化往往是情节发展的主线之一，它有助于推动故事情节的发展，
+									并揭示出人物的性格、动机和内心世界等信息。此外，通过观察人物情绪的变化，观众也可以更加深入地理解电影中所呈现的主题和意义。
 								</div>
 							</div>
 						</div>
