--- a/src/pages/red_image/red_image.html
+++ b/src/pages/red_image/red_image.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="./emptyshot.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>红色电影镜头信息对比平台</title>
+    <title>红色影像源代码——传承红色经典，讲好中国故事</title>
     <style>
         .content-box{
             width:100%;
